--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,10 @@
                 "../node_modules/bootstrap/scss"
               ]
             },
-            "scripts": [],
+            "scripts": [
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/bootstrap/dist/js/bootstrap.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
